buyerzone.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 14492,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.39,
  "homepage_snapshot_redirected_domain": "buyerzone.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930230113id_/http://www.buyerzone.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930230113id_/http%3A//buyerzone.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "buyerzone.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229175101id_/http%3A//www.buyerzone.com/corporate/privacy/index.html",
  "policy_title": "BuyerZone Privacy Policy",
  "policy_url": "buyerzone.com/corporate/privacy/index.html",
  "sha1": "7e741b37b7f4f9724f083498f2c79a9f99e9fb10",
  "simhash": 12012124544377980044,
  "simhash_updated": true,
  "site_hostname": "buyerzone.com",
  "site_url": "http://buyerzone.com",
  "smog": 14.55,
  "strict_updated": true,
  "timestamp": "20071229175101",
  "word_count": 2238,
  "year": 2007
}

--- a/b/bu/buy/buyerzone.com.html
+++ b/b/bu/buy/buyerzone.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the buyerzone.com privacy policy that was archived on 2007-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070616053332id_/http%3A//www.buyerzone.com/corporate/privacy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the buyerzone.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229175101id_/http%3A//www.buyerzone.com/corporate/privacy/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>BuyerZone Privacy Policy</title>
@@ -88,7 +88,7 @@ BuyerZone gathers information for the purpose of matching buyers with relevant s
 
 <p>As a buyer using our Request for Quotes service, you need to provide additional information so BuyerZone can deliver our Request for Quotes service to you. This includes contact information, basic demographic information, and your purchasing requirements. The information collected varies according to the different purchasing categories and can be viewed by visiting the different forms located throughout our site. We will also ask you for feedback about our service, which is collected and stored to allow us to continually improve our offerings.</p>
 
-<p>Cookies are also used to help streamline your experience on the site, automatically logging you in during future visits, for example. You are free to disable cookies at any time if your browser permits. However, by doing so, you may not be able to utilize certain features of our site. If you are unable to submit a Request for Quotes while having cookies disabled, please contact our Customer Care department at 1-888-393-5000 x2.</p>
+<p>Cookies are also used to help streamline your experience on the site, automatically logging you in during future visits, for example. You are free to disable cookies at any time if your browser permits. However, by doing so, you may not be able to utilize certain features of our site. If you are unable to submit a Request for Quotes while having cookies disabled, please contact our Customer Care department at 1-888-393-5000.</p>
 
 <p>As a supplier using our Request for Quotes service, you must provide information that allows us to deliver our service to you. This includes your contact information, information about your desired target markets, and billing information. In addition, we may supplement the information you provide with a credit check to ensure your creditworthiness. It should be noted that any credit card information we receive is stored securely via encryption and an SSL connection; our security measures are reviewed later in this document.</p>
 
@@ -137,7 +137,7 @@ Your information is stored on servers that are protected against unauthorized ac
 
 <p>Notification Preferences. You have the ability to "opt out" or unsubscribe from e-mail communications, such as periodic surveys and our monthly enewsletter, that are not directly related to the BuyerZone Request for Quotes service and/or the status of your account. To update your communication preferences contact our Customer Care department at <a href="mailto:customercare@buyerzone.com.">customercare@buyerzone.com</a>.  If you do contact the Customer Care department, please be sure to specify the type of email communication(s) from which you would like to opt out. Information about how to unsubscribe is also included in every communication we send.</p>
 
-<p>Password. BuyerZone suppliers may be issued a User ID and password to access their account. As a supplier, you are responsible for all actions taken with your user ID and password, including fees charged to your account. Do not share your password with any third parties, as you may be legally liable for any fees that are incurred. If you believe that your password has been compromised, you should immediately change your password or contact Customer Care at <a href="mailto:customercare@buyerzone.com.">customercare@buyerzone.com</a> or 888-393-5000 x2.</p>
+<p>Password. BuyerZone suppliers may be issued a User ID and password to access their account. As a supplier, you are responsible for all actions taken with your user ID and password, including fees charged to your account. Do not share your password with any third parties, as you may be legally liable for any fees that are incurred. If you believe that your password has been compromised, you should immediately change your password or contact Customer Care at <a href="mailto:customercare@buyerzone.com.">customercare@buyerzone.com</a> or 888-393-5000.</p>
 
 <p>CHILDREN<br>
 Children (persons under the age of 18) are not eligible to use BuyerZone's services.
@@ -153,7 +153,7 @@ We may amend this Privacy Policy for minor changes at any time by posting the am
       <p> CONTACTING US<br>
         If you have any additional questions or comments about BuyerZone's privacy statement, please contact us:
       </p><p> BuyerZone<br>
-        404 Wyman Street North, Suite 450<br>
+        225 Wyman Street<br>
 Waltham, MA 02451
 		<br>
         617.868.5757<br>
@@ -339,23 +339,23 @@ Waltham, MA 02451
   <tbody><tr height="8">
     <td width="80" align="right" valign="top"> <font face="Verdana" size="1" align="right"><b>Popular&nbsp;<br>
       Categories</b>&nbsp;</font></td>
-    <td valign="top"> <font face="Verdana" size="1"> <a href="/benefits/401k/qz_questions_1.jhtml">401k
-      Plans</a> - <a href="/finance/atm/qz_questions_783.jhtml">ATM Machines</a> - <a href="/finance/business_loans/qz_questions_757.jhtml">Business
-      Loans</a> - <a href="/finance/collections/qz_questions_43.jhtml">Collection
-      Agencies</a> - <a href="/office_equipment/copiers-color/qz_questions_69.jhtml">Color
-      Copiers</a> - <a href="/office_equipment/copiers-digital/qz_questions_70.jhtml">Copiers</a> - <a href="/finance/credit_card_terminals/qz_questions_767.jhtml">Credit
-      Card Machines</a> - <a href="/computers/lcd_projectors/qz_questions_12.jhtml">LCD
-      Projectors</a> - <a href="/software/mpm/qz_questions_795.jhtml">Medical
-      Billing Software</a> - <a href="/industrial/steel_buildings/qz_questions_790.jhtml">Metal
-      Buildings</a> - <a href="/industrial/modular_buildings/qz_questions_797.jhtml">Modular
-      Buildings</a> - <a href="/personnel/payroll/qz_questions_265.jhtml">Payroll
-      Services</a> - <a href="/computers/pos/qz_questions_782.jhtml">POS
-      Systems</a> - <a href="/mailroom/postage_meters/qz_questions_59.jhtml">Postage
-      Meters</a> - <a href="/telecom_services/telecon_services/qz_questions_714.jhtml">Teleconferencing</a> - <a href="/telecom_equipment/phone_systems/qz_questions_322.jhtml">Telephone
-      Systems</a> - <a href="/personnel/time_tracking/qz_questions_727.jhtml">Time
-      Clock Software</a> - <a href="/marketing/trade_show/qz_questions_66.jhtml">Trade
-      Show Displays</a> - <a href="/telecom_equipment/voip/qz_questions_789.jhtml">VoIP
-      Phone Systems</a> - <b><a href="/services/equote/equote_main.html">All Categories...</a></b> </font><br>
+    <td valign="top"> <font face="Verdana" size="1"> 
+		<a href="/telecom_equipment/phone_systems/qz_questions_322.jhtml">Business Phone Systems</a> -
+        <a href="/finance/collections/qz_questions_43.jhtml">Collection Agency</a> -
+        <a href="/office_equipment/copiers-digital/qz_questions_70.jhtml">Copiers</a> -
+        <a href="/industrial/forklifts/qz_questions_793.jhtml">Forklifts</a> -
+        <a href="/industrial/golf_carts/qz_questions_799.jhtml">Golf Carts</a> -
+        <a href="/security/security-home/qz_questions_803.jhtml">Home Security Systems</a> -
+        <a href="/medical/med-billing-services/qz_questions_945.jhtml">Medical Billing Services</a> -
+        <a href="/software/mpm/qz_questions_795.jhtml">Medical Billing Software</a> -
+        <a href="/industrial/steel_buildings/qz_questions_790.jhtml">Metal Buildings</a> -
+        <a href="/furniture/systems_furniture/tmm-office-partitions.html">Office Partitions</a> -
+        <a href="/computers/pos/qz_questions_782.jhtml">POS Systems</a> -
+        <a href="/mailroom/postage_meters/qz_questions_59.jhtml">Postage Meters</a> -
+        <a href="/industrial/storage-containers/kws-shipping-containers.html">Shipping Containers</a> -
+        <a href="/benefits/health_insurance/qz_questions_2.jhtml">Small Business Health Insurance</a> -
+        <a href="/personnel/time_tracking/qz_questions_727.jhtml">Time Clocks</a> - 
+	<b><a href="/services/equote/equote_main.html">All Categories...</a></b> </font><br>
       <br>
     </td>
   </tr>
@@ -405,22 +405,7 @@ hbx.dft="n";//DOWNLOAD FILE NAMING
 hbx.elf="n";//EXIT LINK FILTER
 
 //SEGMENTS AND FUNNELS
-var url = parent.location.href;
-var supercat = url.split("com/")[1].split("/")[0];
-var cat = url.split("com/")[1].split("/")[1];
-if( supercat == "security" && cat == "security-business" ){
-	hbx.seg="2,7";//VISITOR SEGMENTATION
-}else if( supercat == "security" && cat == "access_control" ){
-	hbx.seg="3,7";//VISITOR SEGMENTATION
-}else if( supercat == "security" && cat == "fire_alarm" ){
-	hbx.seg="4,7";//VISITOR SEGMENTATION
-}else if( supercat == "security" && cat == "security-home" ){
-	hbx.seg="5,7";//VISITOR SEGMENTATION
-}else if( supercat == "security" && cat == "video_surveillance" ){
-	hbx.seg="6,7";//VISITOR SEGMENTATION
-}else{
-	hbx.seg="";//VISITOR SEGMENTATION
-}	
+hbx.seg="";//VISITOR SEGMENTATION
 hbx.fnl="";//FUNNELS
 
 //CAMPAIGNS
