--- a/r/ra/rav/raveaboutit.com.au.html
+++ b/r/ra/rav/raveaboutit.com.au.html
@@ -1,23 +1,25 @@
-<!--The following is the downloaded HTML source of the raveaboutit.com.au privacy policy that was archived on 2006-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20061208154306id_/http%3A//www.raveaboutit.com.au/index.php%3Fp%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the raveaboutit.com.au privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229183626id_/http%3A//www.raveaboutit.com.au/index.php%3Fp%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
-		<title>Rave About It  - Terms and conditions</title>
+		<title>Local Business Reviews - Rave About It - Privacy Statement</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta name="verify-v1" content="VwuvwFIunxpneeAwQQvyV/rmXoFOOFO3bz2C5w4z7U8="> 
+				<meta name="verify-v1" content="VwuvwFIunxpneeAwQQvyV/rmXoFOOFO3bz2C5w4z7U8=">
 		<base href="http://www.raveaboutit.com.au/index.php">
-		<link rel="shortcut icon" type="image/ico" href="http://www.raveaboutit.com.au/favicon.ico">
 		<link rel="stylesheet" href="templates/standard.css">
+		<link rel="stylesheet" href="templates/standard2.css">
+		<link rel="stylesheet" href="templates/autocomplete.css">
 		<link rel="stylesheet" href="templates/freezepane.css">
-		<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-		</script>
+		<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		_uacct = "UA-958321-1";
 		urchinTracker();
 		</script>
 		<script src="templates/functions.js" type="text/javascript"></script>
-		<script src="templates/latlong.js" type="text/javascript"></script>
 		<script src="templates/freezepane.js" type="text/javascript"></script>
+		<script src="/3rdparty/scriptaculous-js-1.7.0/lib/prototype.js" type="text/javascript"></script>
+		<script src="/3rdparty/scriptaculous-js-1.7.0/src/scriptaculous.js" type="text/javascript"></script>
+		<script src="/3rdparty/password_strength.js" type="text/javascript"></script>
 	</head>
 	<body onload="" onunload="">
 		<div align="center" id="FreezePane" class="FreezePaneOff">
@@ -25,63 +27,40 @@
 		</div>
 		<div id="smallMessageBox" onmouseover="showMessageBox('smallMessageBox');" onmouseout="hideMessageBox('smallMessageBox');" style="z-index: 1; position: absolute; background-color: whitesmoke; padding: 5px; border: solid 1px #666; width: 125px; display: none;"></div>
 		<div id="messageBox" onmouseover="showMessageBox('messageBox');" onmouseout="hideMessageBox('messageBox');" style="z-index: 1; position: absolute; background-color: whitesmoke; padding: 5px; border: solid 1px #666; width: 250px; display: none;"></div>
-		
-		<table cellspacing="0" cellpadding="0" border="0" style="width: 100%">
-			<tbody><tr>
-				<td style="text-align: right;"><img src="images/header-left.gif" alt=""><br></td>
-				<td style="width: 210px;"><a href="/index.php"><img src="images/header-centre1.gif" alt="RaveAboutIt.com.au" border="0"></a><br></td>
-				<td style="width: 380px; text-align: center; background:url('images/header-bg.gif');">
-									<form action="index.php" method="get">
-					<input type="hidden" name="p" value="search">
-					<input type="hidden" name="refSearchId" value="">
-<div style="float: left; padding-right: 10px;">
-<div class="inputHeader">What?</div><input name="tags" id="tags" value="" style="width: 140px;">
-</div>
-<div style="float: left; padding-right: 10px;">
-<div class="inputHeader">Where?</div><input name="location" id="location" value="Sydney Metro" style="vertical-align: middle;">
-</div>
-<div style="float: left;">
-<div class="inputHeader">&nbsp;</div><input type="submit" value="Search">
-</div>
-					</form>
-								</td>
-				<td style="width: 30px;">
-					<img src="images/header-centre2.gif" alt=""><br>
-				</td>
-				<td style="width: 180px; background:url('images/header-bg.gif'); text-align: right;">
-					<a href="index.php?p=sign_up"><img src="images/header-sign_up.gif" alt="sign up" border="0"></a><a href="index.php?p=sign_in&amp;refP=privacy"><img src="images/header-sign_in.gif" alt="sign in" border="0"></a><br>				</td>
-				<td style="text-align: left;"><img src="images/header-right.gif" alt=""><br></td>
-			</tr>
-			<tr valign="top">
-				<td style="text-align: right;"><img src="images/nav-left.gif" alt=""><br></td>
-				<td><img src="images/nav-centre1.gif" alt=""></td>
-				<td style="width: 380px; background:url('images/nav-bg.gif'); text-align: center;">
-					<img src="images/nav-break.gif" alt=""><a href="index.php?p=tour" onmouseover="rollOver('navTour', 'tour');" onmouseout="rollOut('navTour', 'tour');"><img src="images/nav-tour.gif" name="navTour" alt="business listings" border="0"></a><img src="images/nav-break.gif" alt=""><a href="index.php?p=business_listings" onmouseover="rollOver('navListForFree', 'list_for_free');" onmouseout="rollOut('navListForFree', 'list_for_free');"><img src="images/nav-list_for_free.gif" name="navListForFree" alt="business listings" border="0"></a><img src="images/nav-break.gif" alt=""><a href="index.php?p=refer_business" onmouseover="rollOver('navReferBusiness', 'refer_business');" onmouseout="rollOut('navReferBusiness', 'refer_business');"><img src="images/nav-refer_business.gif" name="navReferBusiness" alt="refer a business" border="0"></a><img src="images/nav-break.gif" alt=""><a href="index.php?p=contact_us" onmouseover="rollOver('navContactUs', 'contact_us');" onmouseout="rollOut('navContactUs', 'contact_us');"><img src="images/nav-contact_us.gif" name="navContactUs" alt="contact us" border="0"></a><img src="images/nav-break.gif" alt=""><br>				</td>
-				<td colspan="2"><img src="images/nav-centre2.gif" alt=""></td>
-				<td style="text-align: left;"><img src="images/nav-right.gif" alt=""><br></td>
-			</tr>
-			<tr valign="top">
-				<td style="background-color:#efefef;">&nbsp;</td>
-				<td style="width:780px; padding: 10px; background-color: white;" colspan="4">
-					<div style="text-align:center; padding-bottom: 14px; margin-bottom: 14px; border-bottom: solid 1px #ccc;">
-						<script type="text/javascript"><!--
-						google_ad_client = "pub-8693502529635503";
-						google_ad_width = 728;
-						google_ad_height = 90;
-						google_ad_format = "728x90_as";
-						google_ad_type = "text_image";
-						google_ad_channel ="";
-						google_color_border = "FFFFFF";
-						google_color_bg = "FFFFFF";
-						google_color_link = "CC6600";
-						google_color_text = "000000";
-						google_color_url = "CCCCCC"; //"008000";
-						//--></script>
-						<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-						</script>
-					</div>
+		<div id="largeMessageBox" onmouseover="showMessageBox('largeMessageBox');" onmouseout="hideMessageBox('largeMessageBox');" style="z-index: 1; position: absolute; background-color: whitesmoke; padding: 5px; border: solid 1px #666; width: 400px; display: none;"></div>
 
-							<h1>Privacy Policy</h1>
+		<div class="centerDiv">
+		<table class="centerTable" style="width: 780px;" cellpadding="0" cellspacing="0" border="0">
+			
+		<tbody><tr>
+			<td><a href="/"><img src="/images3/logo.gif" alt="Rave About It"></a></td>
+			<td style="text-align: right; color: #666;">
+				<a href="index.php?p=sign_in&amp;refP=privacy">Sign In</a>&nbsp;&nbsp;&nbsp;
+Want an account?  <a href="index.php?p=sign_up">Sign up</a>				<br>
+				<a href="/"><img src="/images3/button2_home.gif" alt="Home"></a>
+								<a href="/local/"><img src="/images3/button2_browse_all.gif" alt="Browse"></a>
+				<a href="/add_review"><img src="/images3/button2_write_review.gif" alt="Write Review"></a><br>
+				<b>Popular categories:</b> <a href="/local/Florists/">Florists</a>, <a href="/local/Lawyers/">Lawyers</a>, <a href="/local/Child-Care/">Child Care</a> and <a href="/local/Hairdressers---Hair-Salons/">Hairdressers</a>
+				
+			</td>
+		</tr>
+		<tr valign="top">
+			<td colspan="2">
+				<!-- START MAIN CONTENT -->
+				<form action="search" method="get">
+<input type="hidden" name="refSearchId" value="">
+<div class="searchBoxNew">
+<img src="/images3/banner-doctor.jpg" alt=""><br>
+<div style="text-align: center; padding: 14px;">
+<span style="margin-right: 14px; font-size: 14pt;">What?</span><input name="tags" id="tags" value="" style="width: 140px; vertical-align: middle; font-size: 12pt;">
+&nbsp;&nbsp;
+<span style="margin-right: 14px; font-size: 14pt;">Where?</span><input name="location" id="location" value="Sydney Metro" style="vertical-align: middle; font-size: 12pt;">
+&nbsp;&nbsp; <input type="image" src="images3/button3_search.gif" style="vertical-align: middle;">
+<br>
+</div>
+</div>
+</form>
+		<h1>Privacy Policy</h1>
 		<p>We have a commitment to the protection of online user privacy under the (Australian) Privacy Amendment (Private Sector) Act 2000 (Cth) on 21 December, 2001.</p>
 		<p>In order to protect your privacy, information we collect is used only in the manner and for the purposes described below.</p>
 		<p>This "Privacy Policy" discloses the privacy practices governing our knowing collection, use, and disclosure of information.</p>
@@ -140,19 +119,55 @@
 
 		<p>Rave About It does not wish to receive any submission that is confidential or proprietary. You agree not to post or otherwise provide any submission that you consider confidential or proprietary, and any submissions you post will be deemed and treated as non-confidential and non-proprietary. In addition, do not post any Submissions that you do not want to assign to Rave About It. No compensation will be paid or is due with respect to the assignment or use of your Submission, as provided herein. Rave About It is under no obligation to post or use any Submission you may provide. By Posting a Submission you warrant and represent that you own or otherwise control all of the rights to your Submission including, without limitation, all the rights necessary for you to assign, provide, post, upload, input or submit the Submission.</p>
 
-		
-					<div style="clear: both; margin-top: 30px; line-height: 18px; text-align: center; font-size: 8pt;">
-						<a href="index.php?p=home">Home</a> |
-						<a href="index.php?p=business_listings">List for free</a> |
-						<a href="index.php?p=contact_us">Contact us</a><br>
-						<a href="index.php?p=privacy">Privacy Policy</a> | <a href="index.php?p=terms">Terms &amp; Conditions</a><br>
-						© 2006 Rave About It.<br>
-					</div>
+			
+				<!-- END MAIN CONTENT -->
+				<div class="navFooter">
+					© 2006-2007 Rave About It.
+					&nbsp;&nbsp;&nbsp;
+					<a href="/">Home</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="/list_for_free">List for free</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="/small_business_seo_services.html">Small Business SEO Services</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="/about_us">About us</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="/contact_us">Contact us</a>
+										&nbsp;&nbsp;&nbsp;
+					<a href="http://raveaboutit.blogspot.com/" target="_blank">Blog</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="/media_blogs">Media &amp; Blog Coverage</a>
+										&nbsp;&nbsp;&nbsp;
+					<a href="index.php?p=sitemap">Sitemap</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="index.php?p=privacy">Privacy Policy</a>
+					&nbsp;&nbsp;&nbsp;
+					<a href="index.php?p=terms">Terms &amp; Conditions</a>
+				</div>
+			</td>
+			<td style="padding-left: 14px; padding-top: 14px;">
+				<script type="text/javascript"><!--
+				google_ad_client = "pub-8693502529635503";
+				google_ad_width = 120;
+				google_ad_height = 600;
+				google_ad_format = "120x600_as";
+				google_ad_type = "text_image";
+				google_ad_channel = "";
+				google_color_border = "CCCCCC";
+				google_color_bg = "ffffff";
 
-				</td>
-				<td style="background-color:#efefef">&nbsp;</td>
-			</tr>
+				//google_color_link = "000000";
+				google_color_link = "f68b1e";
+				google_color_text = "333333";
+				google_color_url = "666666";
+				//-->
+				</script>
+				<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+				</script>
+			</td>
+		</tr>
 		</tbody></table>
+		</div>
 	
 
 </body></html>
