northshorelij.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 959,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.09,
  "homepage_snapshot_redirected_domain": "northshorelij.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930223144id_/http://www.northshorelij.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930223144id_/http%3A//northshorelij.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "northshorelij.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229195538id_/http%3A//www.northshorelij.com/body.cfm%3Fid%3D102",
  "policy_title": "Privacy Policy",
  "policy_url": "northshorelij.com/body.cfm?id=102",
  "sha1": "5faf06c8f3b7e1997d415d495b627febf631adac",
  "simhash": 11413431471852487243,
  "simhash_updated": false,
  "site_hostname": "northshorelij.com",
  "site_url": "http://northshorelij.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071229195538",
  "word_count": 160,
  "year": 2007
}

--- a/n/no/nor/northshorelij.com.html
+++ b/n/no/nor/northshorelij.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the northshorelij.com privacy policy that was archived on 2007-04-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070421061411id_/http%3A//www.northshorelij.com/body.cfm%3Fid%3D102) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the northshorelij.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229195538id_/http%3A//www.northshorelij.com/body.cfm%3Fid%3D102) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 		<title>Privacy Policy</title>
@@ -10,9 +10,15 @@
 		<link rel="stylesheet" type"text="" css"="" href="default.css" media="screen">
 		<link rel="stylesheet" type"text="" css"="" href="CSS/neuroMenu.css" media="screen">
 		<link rel="stylesheet" type"text="" css"="" href="print.css" media="print">
+                                <!--~ hit counter wi --><script>var wiCountVer13="38383130357c6e6f72746873686f72656c696a2e636f6d7c6e6f72746873686f72656c696a2e6e65747c";function wiSLD(host){if(host.search(/[a-z]/i)!=-1){var out;return((out=host.match(/(^|\.)([\w-]+\.[\w-]+)$/))!=null)?out[2].toLowerCase():"";}else return host;}function wiIsLocalURL(url){var urlDom;urlDom=((urlDom=url.match(/^https?:\/\/([\w\.-]+)/i))!=null)?urlDom[1]:"";return wiU(wiCountVer13.substr(10)).indexOf("|"+wiSLD(urlDom)+"|")!=-1;}function wiSetCookieTo(n){document.cookie="wi="+n+"; path=/; domain="+wiSLD(location.host);}function wiU(a){return unescape(a.replace(/(([\da-f]{2})|(u[\da-f]{4}))/g,'%$1'));}function wiUK(str){var x=0;for(var i=0;i<str.length;i++)x=((x+str.charCodeAt(i))*16807)%2147483647;return x+'';}function wiCountNoReloadEntry(){if(wiIsLocalURL(location.href)){var Cookie=document.cookie;var Referrer=document.referrer;var noCookie=Cookie.search(/\bwi=\d+\b/)==-1;if(wiIsLocalURL(Referrer)){if(noCookie)wiSetCookieTo('1');}else if(Referrer!=''||noCookie){var pg=escape(location.href);var ref=escape(Referrer);var UkPgRef=wiUK(pg+ref);var RePgRef=new RegExp('\\bwi='+UkPgRef+'\\b');if(Cookie.search(RePgRef)==-1){wiSetCookieTo(UkPgRef);var url="http://www.wicountserver.com/count.asp?typ=load&pg="+pg+"&ac="+wiU(wiCountVer13.substr(0,10))+"&ref="+ref;if(location.protocol=='http:'){pixel=new Image(1,1);pixel.src=url.replace(/\.[^\.]*\./,unescape('%2e%77%69%63%34%2e'));}}}}}wiCountNoReloadEntry();</script><!-- HC northshorelij.com ~--><base target="_top"><!-- hitcounter ok --> 
 	</head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"><!--~ Dynamic website caching for reduced server load and increased crawlability. --><!-- links to cached pages --><noscript><table width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td align="right"><a href="http://www.northshorelij.com/100.cfm"><img src="http://www.northshorelij.com/NorthShoreLongIslandJewishHealthSystem1.GIF" border="0"></a><a href="http://www.northshorelij.com/12.cfm"><img src="http://www.northshorelij.com/NorthShoreLongIslandJewishHealthSystem1.GIF" border="0"></a><a href="http://www.northshorelij.com/15.cfm"><img src="http://www.northshorelij.com/NorthShoreLongIslandJewishHealthSystem1.GIF" border="0"></a></td></tr></table></noscript><!-- B northshorelij.com --><!-- body ok -->
+<!-- ClickTale Top part -->
+<script type="text/javascript">
+var WRInitTime=(new Date()).getTime();
+</script>
+<!-- ClickTale end of Top part -->
   <div id="nslij-site-header">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 			<tbody><tr> 
@@ -407,7 +413,7 @@
 		NavBarRegisterLayer('lyrfindaphysician','show');
 		NavBarRegisterLayer('lyrnewsevents','show');
 		NavBarRegisterLayer('lyrwaystogive','show');
-		NavBarRegisterLayer('lyrresearch','show');
+		NavBarRegisterLayer('lyrresearcheducation','show');
 		NavBarRegisterLayer('lyrforhealthcare','show');
 		
 					BillzArrayPushUnique(aryLayerMoused, "lyrBottomMO','','show");
@@ -440,7 +446,7 @@
 		<td class="" valign="top" align="left" title=""><a href="bodyiframe.cfm?id=147&amp;oTopID=0" onmouseover="RestoreAll();nbMouseover('findaphysician_2_3','images/findaphysician.gif','');BillzNavBarMM_showHideLayers('lyrfindaphysician','','show','lyrBottomMO','','show','menu');" onmouseout="nbMouseoverRestore();" class=""><img src="images/findaphysician.gif" border="0" alt="Find a Physician" id="findaphysician_2_3" name="findaphysician_2_3"></a><script type="text/javascript">nbImagePreload('findaphysician_2_3','images/findaphysician_on.gif', '');</script></td>
 		<td class="" valign="top" align="left" title=""><a href="body.cfm?id=6&amp;oTopID=0" onmouseover="RestoreAll();nbMouseover('newsevents_2_4','images/newsevents.gif','');BillzNavBarMM_showHideLayers('lyrnewsevents','','show','lyrBottomMO','','show','menu');" onmouseout="nbMouseoverRestore();" class=""><img src="images/newsevents.gif" border="0" alt="News &amp; Events" id="newsevents_2_4" name="newsevents_2_4"></a><script type="text/javascript">nbImagePreload('newsevents_2_4','images/newsevents_on.gif', '');</script></td>
 		<td class="" valign="top" align="left" title=""><a href="body.cfm?id=9&amp;oTopID=0" onmouseover="RestoreAll();nbMouseover('waystogive_2_5','images/waystogive.gif','');BillzNavBarMM_showHideLayers('lyrwaystogive','','show','lyrBottomMO','','show','menu');" onmouseout="nbMouseoverRestore();" class=""><img src="images/waystogive.gif" border="0" alt="Ways to Give" id="waystogive_2_5" name="waystogive_2_5"></a><script type="text/javascript">nbImagePreload('waystogive_2_5','images/waystogive_on.gif', '');</script></td>
-		<td class="" valign="top" align="left" title=""><a href="body.cfm?id=2867&amp;oTopID=0" onmouseover="RestoreAll();nbMouseover('research_2_6','images/research.gif','');BillzNavBarMM_showHideLayers('lyrresearch','','show','lyrBottomMO','','show','menu');" onmouseout="nbMouseoverRestore();" class=""><img src="images/research.gif" border="0" alt="Education and Research" id="research_2_6" name="research_2_6"></a><script type="text/javascript">nbImagePreload('research_2_6','images/research_on.gif', '');</script></td>
+		<td class="" valign="top" align="left" title=""><a href="body.cfm?id=2867&amp;oTopID=0" onmouseover="RestoreAll();nbMouseover('research_education_2_6','images/research_education.gif','');BillzNavBarMM_showHideLayers('lyrresearcheducation','','show','lyrBottomMO','','show','menu');" onmouseout="nbMouseoverRestore();" class=""><img src="images/research_education.gif" border="0" alt="Education and Research" id="research_education_2_6" name="research_education_2_6"></a><script type="text/javascript">nbImagePreload('research_education_2_6','images/research_education_on.gif', '');</script></td>
 		<td class="" valign="top" align="left" title=""><a href="body.cfm?id=8&amp;oTopID=0" onmouseover="RestoreAll();nbMouseover('forhealthcare_2_7','images/forhealthcare.gif','');BillzNavBarMM_showHideLayers('lyrforhealthcare','','show','lyrBottomMO','','show','menu');" onmouseout="nbMouseoverRestore();" class=""><img src="images/forhealthcare.gif" border="0" alt="For Health Professionals" id="forhealthcare_2_7" name="forhealthcare_2_7"></a><script type="text/javascript">nbImagePreload('forhealthcare_2_7','images/forhealthcare_on.gif', '');</script></td>
 	</tr>
 
@@ -619,7 +625,6 @@ NS-LIJ will not release your name, address, telephone number, credit card number
 	</div>
 	
 	
-
 <!-- START OF SDC Advanced Tracking Code -->
 <!-- Copyright (c) 1996-2005 WebTrends Inc.  All rights reserved. -->
 <!-- V8.0 -->
@@ -738,22 +743,18 @@ function dcsFPC(offset){
 		WT.vt_f=WT.vt_f_a="2";
 	}
 }
-
 // Code section for Use the new first-party cookie generated with this tag.
 var gFpc="WT_FPC";
 var gConvert=true;
-
 function dcsAdv(){
 	dcsFunc("dcsET");
 	dcsFunc("dcsCookie");
 	dcsFunc("dcsAdSearch");
 	dcsFunc("dcsTP");
 }
-
 //-->
 </script>
 <!-- END OF SDC Advanced Tracking Code -->
-
 <!-- START OF SmartSource Data Collector TAG -->
 <!-- Copyright (c) 1996-2005 WebTrends Inc.  All rights reserved. -->
 <!-- V8.0 -->
@@ -761,7 +762,6 @@ function dcsAdv(){
 <script type="text/javascript"><!--
 var gDomain="69.18.146.6";
 var gDcsId="dcszln8u92nsp5aaaice9bjde_2s3s";
-
 if ((typeof(gConvert)!="undefined")&&gConvert&&(document.cookie.indexOf(gFpc+"=")==-1)&&(document.cookie.indexOf("WTLOPTOUT=")==-1)){
 	document.write("<SCR"+"IPT TYPE='text/javascript' SRC='"+"http"+(window.location.protocol.indexOf('https:')==0?'s':'')+"://"+gDomain+"/"+gDcsId+"/wtid.js"+"'><\/SCR"+"IPT>");
 }
@@ -779,9 +779,7 @@ if (window.RegExp){
 	var RE={"%09":/\t/g,"%20":/ /g,"%23":/\#/g,"%26":/\&/g,"%2B":/\+/g,"%3F":/\?/g,"%5C":/\\/g,"%22":/\"/g,"%7F":/\x7F/g,"%A0":/\xA0/g};
 	var I18NRE={"%25":/\%/g};
 }
-
 // Add customizations here
-
 function dcsVar(){
 	var dCurrent=new Date();
 	WT.tz=dCurrent.getTimezoneOffset()/60*-1;
@@ -873,11 +871,9 @@ function dcsVar(){
 		}
 	}
 }
-
 function dcsA(N,V){
 	return "&"+N+"="+dcsEscape(V, RE);
 }
-
 function dcsEscape(S, REL){
 	if (typeof(REL)!="undefined"){
 		var retStr = new String(S);
@@ -890,11 +886,9 @@ function dcsEscape(S, REL){
 		return escape(S);
 	}
 }
-
 function dcsEncode(S){
 	return (typeof(encodeURIComponent)=="function")?encodeURIComponent(S):escape(S);
 }
-
 function dcsCreateImage(dcsSrc){
 	if (document.images){
 		gImages[gIndex]=new Image;
@@ -908,7 +902,6 @@ function dcsCreateImage(dcsSrc){
 		document.write('<IMG ALT="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="'+dcsSrc+'">');
 	}
 }
-
 function dcsMeta(){
 	var elems;
 	if (document.all){
@@ -934,7 +927,6 @@ function dcsMeta(){
 		}
 	}
 }
-
 function dcsTag(){
 	if (document.cookie.indexOf("WTLOPTOUT=")!=-1){
 		return;
@@ -960,7 +952,6 @@ function dcsTag(){
 	}
 	dcsCreateImage(P);
 }
-
 function dcsJV(){
 	var agt=navigator.userAgent.toLowerCase();
 	var major=parseInt(navigator.appVersion);
@@ -990,25 +981,28 @@ function dcsJV(){
 	}
 	return jv;
 }
-
 function dcsFunc(func){
 	if (typeof(window[func])=="function"){
 		window[func]();
 	}
 }
-
 dcsVar();
 dcsMeta();
 dcsFunc("dcsAdv");
 dcsTag();
 //-->
 </script>
-
 <noscript>
 <IMG ALT="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://69.18.146.6/dcszln8u92nsp5aaaice9bjde_2s3s/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.0.0">
 </noscript>
 <!-- END OF SmartSource Data Collector  TAG -->
-
+<!-- ClickTale Bottom part -->
+<div id="ClickTale" style="display: none;"></div>
+<script src="./js/WRa.js" type="text/javascript"></script>
+<script type="text/javascript">
+if(typeof ClickTale=='function') ClickTale(1148,0.001);
+</script>
+<!-- ClickTale end of Bottom part -->
 
 
 </body></html>
