--- a/c/ca/can/canetads.com.html
+++ b/c/ca/can/canetads.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the canetads.com privacy policy that was archived on 2007-04-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070421184747id_/http%3A//www.canetads.com/info/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the canetads.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229195611id_/http%3A//www.canetads.com/info/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
   	<title>Canada Free Classifieds at CANetAds.com - Privacy Policy</title>
@@ -164,7 +164,7 @@ CANetAds.com - <a href="http://www.CANetAds.com/">Canada Free Classifieds</a>
 </div>
 <div id="ssBottomCRLeft">© 2007 CANetAds.com</div>
 <div id="ssBottomCRRight">
-	<a href="http://www.usnetads.com/">Free Classified Ads</a> | <a href="http://www.getjob.us/">Job Posting</a> | <a href="http://www.aufreeads.com/">Australia Free Ads</a> | <a href="http://www.ukfreeads.ws/">Free UK Classifieds</a> | <a href="http://www.cnnetads.com/">China Free Ads</a> | <a href="http://www.hot-web-ads.com/">Free Classified Advertising</a>
+	<a href="http://www.usnetads.com/">US Free Classifieds</a> | <a href="http://www.getjob.us/">GetJob.us</a> | <a href="http://www.aufreeads.com/">AUFreeAds.com</a> | <a href="http://www.ukfreeads.ws/">UK Free Classifieds</a> | <a href="http://www.cnnetads.com/">CNNetAds.com</a> | <a href="http://www.hot-web-ads.com/">Free Classified Advertising</a>
 </div>
 <div id="ssClearBothSection"></div>
 
