--- a/p/po/pow/powerdatarecovery.com.html
+++ b/p/po/pow/powerdatarecovery.com.html
@@ -1,33 +1,11 @@
-<!--The following is the downloaded HTML source of the powerdatarecovery.com privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513070427id_/http%3A//www.powerdatarecovery.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the powerdatarecovery.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229204217id_/http%3A//www.powerdatarecovery.com/privacy.htm) for the most accurate reproduction.-->
 
-<html><head>
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-
-</script>
-
-<script type="text/javascript">
-
-_uacct = "UA-686301-1";
-
-urchinTracker();
-
-</script>
-
-
-
-<title>Professional Data Recovery Software from MT Solution. File Recovery &amp; 
-
-
-
-Undelete Software</title>
-
-
-
+<html><!-- data recovery, data recovery software, undelete, file recovery, photo recovery, Data Recovery, easy recovery, recovery software, ntfs recovery, file undelete --><head>
+<title>Privacy Policy - MT Solution Data Recovery | Photo Recovery | CD DVD Recovery</title>
+<meta name="DESCRIPTION" content="MT Solution respects your right to privacy. Because we feel your privacy is so important, we are providing this page to describe when and how we collect and use your information.">
+<meta name="keywords" content="Privacy Policy, data recovery, photo recovery">
 <base target="_self">
-
-
 
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
@@ -153,7 +131,7 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-	<table cellpadding="0" cellspacing="1" border="0" width="775" id="table4" style="padding: 0">
+	<table align="center" cellpadding="0" cellspacing="0" border="0" width="775" id="table4" style="padding: 0">
 
 
 
@@ -201,25 +179,15 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-			<table cellpadding="0" cellspacing="0" border="0" width="100%" id="table2" bgcolor="#99AFC4" style="padding: 0">
-
-
+			<table cellpadding="0" cellspacing="0" border="0" width="100%" id="table2" bgcolor="#ffffff" style="padding: 0">
 
 				<tbody><tr>
 
-
-
 					<td width="100%" height="2">
-
-
 
 					<p><font face="Tahoma" style="font-size: 0.5pt">&nbsp;</font></p></td>
 
-
-
 				</tr>
-
-
 
 			</tbody></table><center>
 
@@ -255,11 +223,20 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 						
 <li>
-						<a target="_self" title="Data Recovery Software" href="intro.htm">Power Data Recovery</a> </li>
-						<li>
-						<a target="_self" title="Photo Recovery Software" href="prg_intro.htm">Photo Recovery Genius</a> </li>
-						<li>
-						<a target="_self" title="Upcoming Products" href="upcoming.htm">Upcoming Products</a> </li>
+
+					<a target="_self" title="Data Recovery Software" href="power-data-recovery.htm">Power Data Recovery</a> </li>
+
+					<li>
+
+					<a target="_self" title="Photo Recovery Software" href="photo-recovery-genius.htm">Photo Recovery Genius</a> </li>
+
+					<li>
+
+					<a target="_self" title="Power CD DVD Recovery" href="power-cd-dvd-recovery.htm">Power CD DVD Recovery</a> </li>
+
+					<li>
+
+					<a target="_self" title="Upcoming Products" href="upcoming.htm">Upcoming Products</a> </li>
 					</ul>
 					</li>
 
@@ -377,9 +354,6 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 				</ul></div>
-
-
-
 			</center>
 
 
@@ -412,11 +386,12 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-			<td colspan="2" valign="bottom" bgcolor="#000000">&nbsp;
-
-
-
-			</td>
+			<td colspan="2" valign="bottom" bgcolor="#000000"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tbody><tr>
+                <td width="24%">&nbsp;</td>
+                <td width="76%"><a href="index.htm"><font face="Verdana" size="1" color="cccccc" style="text-decoration: none">Home</font></a> <font face="Verdana" size="1" color="cccccc"> -&gt; </font> <font face="Verdana" size="1" color="cccccc" style="text-decoration: none">Privacy Policy </font></td>
+              </tr>
+            </tbody></table>			</td>
 
 
 
@@ -444,7 +419,7 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-			<table border="0" width="100%" id="table5" height="100%">
+			<table width="100%" border="0" cellpadding="0" cellspacing="0" id="table5" bgcolor="#ffffff">
 
 
 
@@ -720,35 +695,11 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-		<tr>
+		
 
 
 
-			<td colspan="2">&nbsp;
-
-
-
-			</td>
-
-
-
-		</tr>
-
-
-
-		<tr>
-
-
-
-			<td bgcolor="#99AFC4" colspan="2">
-
-
-
-			<font face="Tahoma" style="font-size: 1pt">&nbsp;</font></td>
-
-
-
-		</tr>
+		
 
 
 
@@ -780,15 +731,7 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-			<font color="#FFFFFF"><span style="text-decoration: none">About Us</span></font></a><a href="aboutus.htm"><font color="#FFFFFF"><span style="text-decoration: none">
-
-
-
-			</span>
-
-
-
-			</font></a> </span></font>&nbsp; |&nbsp;&nbsp;
+			<font color="#FFFFFF"><span style="text-decoration: none">About Us</span></font></a> </span></font>&nbsp; |&nbsp;&nbsp;
 
 
 
@@ -800,11 +743,9 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-		|&nbsp;&nbsp; <a href="contact.htm">
+		|&nbsp;&nbsp; <a href="sitemap.htm">
 
-
-
-			<span style="text-decoration: none"><font color="#FFFFFF">Contact</font></span></a>&nbsp;&nbsp; |&nbsp;&nbsp; 
+			<span style="text-decoration: none"><font color="#FFFFFF">Sitemap</font></span></a>&nbsp;&nbsp; |&nbsp;&nbsp; 
 
 
 
@@ -824,7 +765,7 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
-			<font color="#FFFFFF" size="1" face="Verdana">Copyright © MT 
+			<font color="#FFFFFF" size="1" face="Verdana">Copyright (C) MT 
 
 
 
@@ -833,7 +774,7 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 		</tr>
-
+		
 
 
 	</tbody></table></div>
@@ -852,6 +793,17 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
 
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-686301-1";
+
+urchinTracker();
+
+</script>
 
 
 
