--- a/i/im/ima/imaginif.com.au.html
+++ b/i/im/ima/imaginif.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the imaginif.com.au privacy policy that was archived on 2007-05-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070522090928id_/http%3A//www.imaginif.com.au/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the imaginif.com.au privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229204818id_/http%3A//imaginif.com.au/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -116,7 +116,7 @@ Abused Child Trust.</span></div></td>
             <td width="405" valign="top"><table width="405" border="0" align="right" cellpadding="0" cellspacing="1">
               <tbody><tr>
                 <td width="100" height="100" bgcolor="#FFFFFF"><a href="about_us.htm"></a><a href="about_us.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/gallery1_2.jpg',1)"><img src="images/gallery1_1.jpg" name="Image8" width="100" height="100" border="0" id="Image8"></a></td>
-                <td width="100" bgcolor="#FFFFFF"><a href="blog.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/gallery5_2.jpg',1)"><img src="images/gallery5_1.jpg" name="Image7" width="100" height="100" border="0" id="Image7"></a></td>
+                <td width="100" bgcolor="#FFFFFF"><a href="http://www.imaginif.com.au/~ima33724/blog/" target="_blank" onmouseover="MM_swapImage('Image7','','images/gallery5_2.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="images/gallery5_1.jpg" name="Image7" width="100" height="100" border="0" id="Image7"></a></td>
                 <td width="100" bgcolor="#FFFFFF"><a href="forum.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/gallery6_2.jpg',1)"><img src="images/gallery6_1.jpg" name="Image9" width="100" height="100" border="0" id="Image9"></a></td>
                 <td bgcolor="#FFFFFF"><a href="shop.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/gallery2_2.jpg',1)"><img src="images/gallery2_1.jpg" name="Image10" width="100" height="100" border="0" id="Image10"></a><a href="shop.htm"></a></td>
               </tr>
@@ -207,6 +207,12 @@ Abused Child Trust.</span></div></td>
     </tbody></table></td>
   </tr>
 </tbody></table>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-972666-6";
+urchinTracker();
+</script>
 
 
 </body></html>
