--- a/r/re/ref/reflexion.net.html
+++ b/r/re/ref/reflexion.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the reflexion.net privacy policy that was archived on 2007-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070626013603id_/http%3A//www.reflexion.net/privacy/index.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the reflexion.net privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229205142id_/http%3A//www.reflexion.net/privacy/index.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 	<title>Reflexion Networks - Privacy Statement - </title>
@@ -24,6 +24,8 @@
 		@import "http://www.reflexion.net/includes/css/forms.css";
 		@import "http://www.reflexion.net/sifr/sIFR-screen.css";
 		@import "http://www.reflexion.net/includes/css/reflexion-custom.css";
+		@import "http://www.reflexion.net/includes/css/modaldbox.css";
+		@import "http://www.reflexion.net/includes/css/RTC5-Message_Flow.css";
         				
 	</style>
 	<link rel="stylesheet" type="text/css" href="http://www.reflexion.net/includes/css/print.css" media="print">
@@ -36,6 +38,7 @@
 	<script type="text/javascript" src="http://www.reflexion.net/includes/js/common.js"></script>
 	<script type="text/javascript" src="http://www.reflexion.net/includes/js/functions.js"></script>
 	<script type="text/javascript" src="http://www.reflexion.net/includes/js/menus.js"></script>
+	<script type="text/javascript" src="http://www.reflexion.net/includes/js/modaldbox.js"></script>
 	<script type="text/javascript" src="http://www.reflexion.net/includes/js/reflexion.js"></script>
 	<script type="text/javascript" src="http://www.reflexion.net/includes/js/ufo.js"></script>
 	<script type="text/javascript" src="http://www.reflexion.net/sifr/sifr.js"></script>
@@ -127,18 +130,12 @@
 	
 	<span id="skip-navigation"><a href="#content">Skip Navigation</a></span>
 	
-	<ul style="list-style: none;" id="constants">
-			<li id="phone">(781) 569-6666</li>
-		<li id="contact"><a href="http://www.reflexion.net/about/contact.php">Contact Us</a></li>
-	</ul>
-	<ul style="list-style: none;" id="slogan">
-		<li>Restoring Confidence in Email</li>
-	</ul>
-	
+  <a href="/resources/pr-crn.php"><img id="constants" src="/img/content-design/logos/crn.png"></a>
+
 	<!-- Primary Navigation -->
 	
 <ul id="nav-primary">
-	<li id="total-control"><a id="menu1" href="http://www.reflexion.net/control/index.php">Total Control</a></li>
+	<li id="technology"><a id="menu1" href="http://www.reflexion.net/control/index.php">Technology</a></li>
 	<li id="solutions"><a id="menu2" href="http://www.reflexion.net/solutions/index.php">Solutions</a></li>
 	<li id="support"><a id="menu3" href="http://www.reflexion.net/support/index.php">Support</a></li>
 	<li id="resource-center"><a id="menu4" href="http://www.reflexion.net/resources/in-the-news.php">Resource Center</a></li>
@@ -187,7 +184,7 @@
 		
 		<p>Reflexion reserves the right to change this Privacy Statement at its own discretion. You indicate your acceptance of the Reflexion Privacy Policy by providing any requested information and continuing to use the Reflexion Web site. </p>
 		
-		<p>If you have any questions or comments about this policy, please contact us at <a href="mailto:privacy.207-241-233-35-S85547@reflexion.net">privacy@reflexion.net</a>. We would value your input.</p>
+		<p>If you have any questions or comments about this policy, please contact us at <a href="mailto:privacy.64-208-172-181-S969017@reflexion.net">privacy@reflexion.net</a>. We would value your input.</p>
 	
 	
 	</div> <!-- /div#content -->
@@ -198,27 +195,15 @@
 		<script type="text/javascript">
   		randomimage();
 		</script>
-			</div> <!-- /div#focusAreas -->
+    
+	</div> <!-- /div#focusAreas -->
 	<!--/focus-areas.php-->	
 	
 	
 
 
 	<div id="footer">
-		<div id="copyright">© 2007 Reflexion Networks, Inc. All rights reserved.</div>
-		<div id="footerNavigation">
-		<a href="http://www.reflexion.net/index.php ">Home</a>&nbsp;|&nbsp;<a href="http://www.reflexion.net/about/contact.php ">Contact Us</a>&nbsp;|&nbsp;<a href="http://www.reflexion.net/privacy/index.php ">Privacy Statement</a>		</div>
-    <div id="flags">
-      <!--a href="http://"--><img style="width: 36px; height: 18px;" alt="Australia" title="Australia" src="/img/homepage/flags/as.gif"><!--/a-->
-      <a href="http://www.reflexion.be/"><img style="width: 21px; height: 18px;" alt="Belgium" title="Belgium" src="/img/homepage/flags/be.gif"></a>
-      <a href="http://www.sigmasd.com/home/sr3_prdidx.asp?id=216425"><img style="width: 36px; height: 18px;" alt="Ireland" title="Ireland" src="/img/homepage/flags/ei.gif"></a>
-      <a href="http://www.facultare.com"><img style="width: 27px; height: 18px;" alt="Guatemala" title="Guatemala" src="/img/homepage/flags/gt.gif"></a><br>
-      <a href="http://www.anti-spam.cc/"><img style="width: 27px; height: 18px;" alt="Italy" title="Italy" src="/img/homepage/flags/it.gif"></a>
-      <a href="http://www.reflexion.be/"><img style="width: 30px; height: 18px;" alt="Luxembourg" title="Luxembourg" src="/img/homepage/flags/lu.gif"></a>
-      <a href="http://www.reflexion.be/"><img style="width: 27px; height: 18px;" alt="Netherlands" title="Netherlands" src="/img/homepage/flags/nl.gif"></a>
-      <a href="http://www.sigmasd.com/home/sr3_prdidx.asp?id=216425"><img style="width: 36px; height: 18px;" alt="United Kingdom" title="United Kingdom" src="/img/homepage/flags/uk.gif"></a>
-    </div>
-		<!--
+    		<!--
 		<div id="footerNavigation">
 			<a href="#">Home</a> | <a href="#">Contact Us</a> | <a href="#">Privacy Policy</a>
 		</div>
@@ -231,14 +216,11 @@
 <div class="dhtmlMenu" id="menu1Container">
 	<ul class="dhtmlBox" id="menu1Content">
 	<li><a href="http://www.reflexion.net/control/index.php">Overview</a></li>
-	<li><a href="http://www.reflexion.net/control/how-it-works.php">How it Works</a></li>
+	<li><a href="http://www.reflexion.net/control/email-routing.php">Email Routing</a></li>
+	<li><a href="http://www.reflexion.net/control/how-reflexion-works.php">How Reflexion Works</a></li>
+	<li><a href="http://www.reflexion.net/control/summary-of-features.php">Summary of Features</a></li>
 	<li><a href="http://www.reflexion.net/control/differentiators.php">Key Differentiators</a></li>
-	<li><a href="http://www.reflexion.net/control/av.php">Anti-Virus</a></li>
-	<li><a href="http://www.reflexion.net/control/dsf.php">Delegated Spam Folder</a></li>
-	<li><a href="http://www.reflexion.net/control/phishing.php">Phishing Prevention</a></li>
-	<li><a href="http://www.reflexion.net/control/dhap.php">DHA Protection</a></li>
-	<li><a href="http://www.reflexion.net/control/roma.php">Outbound Mail Auditing</a></li>
-	<li><a href="http://www.reflexion.net/control/email-continuity.php">Email Continuity</a></li>
+	<li><a href="http://www.reflexion.net/control/archiving.php">Email Archiving</a></li>
 	</ul>
 </div>
 <div class="dhtmlMenu" id="menu2Container">
@@ -258,11 +240,9 @@
 </div>
 <div class="dhtmlMenu" id="menu4Container">
 	<ul class="dhtmlBox" id="menu4Content">
-	<li><a href="http://www.reflexion.net/resources/analyst-reviews.php">Analyst Reviews</a></li>
-	<li><a href="http://www.reflexion.net/resources/case-studies.php">Case Studies</a></li>
+	<li><a href="http://www.reflexion.net/resources/in-the-news.php">In The News</a></li>
 	<li><a href="http://www.reflexion.net/resources/testimonials.php">Testimonials</a></li>
 	<li><a href="http://www.reflexion.net/resources/events.php">Events</a></li>
-	<li><a href="http://www.reflexion.net/resources/in-the-news.php">In The News</a></li>
 	<li><a href="http://www.reflexion.net/resources/white-papers.php">White Papers</a></li>
 	</ul>
 </div>
@@ -282,6 +262,7 @@
 <script type="text/javascript">
 sifr.init();
 </script>
+<script src="include/js/modaldbox.js" type="text/javascript"></script>
 
 
 
