--- a/s/si/sim/simplestar.com.html
+++ b/s/si/sim/simplestar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the simplestar.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629002909id_/http%3A//www.simplestar.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the simplestar.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229220210id_/http%3A//www.simplestar.com/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 
@@ -58,7 +58,7 @@
 	
 	<div class="nav_item support"></div>
 	
-	<div id="products_subnav" class="subnav"><a href="/software/">Software</a>&nbsp;  &nbsp;<a href="http://www.photoshow.com" target="_blank">Web</a>&nbsp;  &nbsp;<a href="/dvd/">DVD</a>&nbsp;  &nbsp;<a href="/tv/">TV</a>
+	<div id="products_subnav" class="subnav"><a href="/software/">Software</a>&nbsp;  &nbsp;<a href="http://www.photoshow.com" target="_blank">Web</a>&nbsp;  &nbsp;<a href="/dvd/">DVD</a>&nbsp; <a href="/widgets/">Widgets</a>&nbsp;  &nbsp;<a href="/tv/">TV</a>
 	</div>
 	
 	<div id="about_subnav" class="subnav"><a href="/about/history">About Simple Star</a>&nbsp;&nbsp;
@@ -227,6 +227,18 @@ Please note that these addresses are for privacy and security matters only. If y
 
 </div>
 </div><!-- end content -->
+<!-- Google Analytics Base Code -->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+  _uacct="UA-1580991-1";
+  _udn="none";  
+  _ulink=1;  
+  urchinTracker();   
+</script>
+
+
 <!-- SiteCatalyst code version: H.1. -->
 <script language="JavaScript"><!--
 var s_account="simplestarcom"
