--- a/g/gu/gui/guideposts.org.html
+++ b/g/gu/gui/guideposts.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the guideposts.org privacy policy that was archived on 2006-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20061203054039id_/http%3A//www.guideposts.org/_lp/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the guideposts.org privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229224938id_/http%3A//www.guideposts.org/privacy.asp) for the most accurate reproduction.-->
 
 <html><head></head><body> <!-- PUT IN BODY TAG IF NEEDED AGAIN onload="openPopWinOnceBack('pop-up.htm', 330, 192)"  >-->
 <!-- Commented out by Ron S. 11/16/04 <SCRIPT LANGUAGE="JavaScript">
