blogexplosion.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 1899,
  "classifier_probability": 0.76,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 8.16,
  "homepage_snapshot_redirected_domain": "blogexplosion.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930211745id_/http://blogexplosion.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930211745id_/http%3A//blogexplosion.com",
  "interval": "2007_B",
  "link_text": "Privacy statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "blogexplosion.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229225306id_/http%3A//blogexplosion.com/privacy.php",
  "policy_title": "Privacy Statement of BlogExplosion.com - BlogExplosion.com",
  "policy_url": "blogexplosion.com/privacy.php",
  "sha1": "d02f7b4432a32102d468a785a3d099f0c06f4ee6",
  "simhash": 9696372153338877024,
  "simhash_updated": true,
  "site_hostname": "blogexplosion.com",
  "site_url": "http://blogexplosion.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071229225306",
  "word_count": 312,
  "year": 2007
}

--- a/b/bl/blo/blogexplosion.com.html
+++ b/b/bl/blo/blogexplosion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blogexplosion.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623092741id_/http%3A//blogexplosion.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blogexplosion.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229225306id_/http%3A//blogexplosion.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Statement of BlogExplosion.com - BlogExplosion.com</title>
@@ -25,9 +25,8 @@ business blogs">
 
 <body style="background: white;">
 <div id="skyscraper" style="position: absolute;top: 20px; left:50%; margin-left:400px">
-<!-- begin ZEDO for channel: V 07GKKO , publisher: V 07GKKO , Ad Dimension: Wide Skyscraper - 160 x 600 -->
-<iframe src="http://c5.zedo.com/jsc/c5/ff2.html?n=643;c=21;s=12;d=7;w=160;h=600" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true" width="160" height="600"></iframe>
-<!-- end ZEDO for channel: V 07GKKO , publisher: V 07GKKO , Ad Dimension: Wide Skyscraper - 160 x 600 -->
+<script language="javascript" src="http://ads.addynamix.com/creative/2-2125132-1j?"></script> 
+<noscript language="javascript"><a href="http://ads.addynamix.com/click/2-2125132-1"><img src="http://ads.addynamix.com/creative/2-2125132-1" border=0></a></noscript>
 </div>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
