lovepoemsandquotes.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 2618,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "lovepoemsandquotes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001104441id_/http://www.lovepoemsandquotes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001104441id_/http%3A//lovepoemsandquotes.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "lovepoemsandquotes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229230857id_/http%3A//www.lovepoemsandquotes.com/Privacy.html",
  "policy_title": "Privacy Policy - Love Poems And Quotes",
  "policy_url": "lovepoemsandquotes.com/Privacy.html",
  "sha1": "feb5146c0a9b87dea4a830de836f3048556f5abe",
  "simhash": 11746654719673065510,
  "simhash_updated": false,
  "site_hostname": "lovepoemsandquotes.com",
  "site_url": "http://lovepoemsandquotes.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071229230857",
  "word_count": 454,
  "year": 2007
}

--- a/l/lo/lov/lovepoemsandquotes.com.html
+++ b/l/lo/lov/lovepoemsandquotes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lovepoemsandquotes.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630060055id_/http%3A//www.lovepoemsandquotes.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lovepoemsandquotes.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229230857id_/http%3A//www.lovepoemsandquotes.com/Privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -66,8 +66,8 @@ function abm()
       u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
       dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
       if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-      dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=5079&amp;m=1&amp;tp=1&amp;f=b&amp;v=1.4&amp;c=3620&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=5079&m=1&c=3620"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=5079&m=1&tp=1&f=b&v=1.4&c=3620&r=&d=n" width=468 height=60 border=0 ></a>
+      dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=5079&amp;m=1&amp;tp=1&amp;f=b&amp;v=1.4&amp;c=3932&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=5079&m=1&c=3932"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=5079&m=1&tp=1&f=b&v=1.4&c=3932&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
       <a href="http://media.fastclick.net/w/click.here?sid=5079&m=1&c=1"  target="_blank">
@@ -116,30 +116,23 @@ function abm()
         <tbody><tr><td width="175" align="center"><img src="Pics/x.gif" width="1" height="8" border="0" alt=""></td></tr></tbody></table>
       <table width="175" cellspacing="0" cellpadding="1" border="1" align="center" bgcolor="#FFFFFF">
         <tbody><tr><td width="175" align="center" bgcolor="#9932CC" class="mnhdng"><img src="Pics/x.gif" width="1" height="3" border="0" alt=""><br>Other Sites Of Interest<br><img src="Pics/x.gif" width="1" height="3" border="0" alt=""></td></tr>
-        <tr><td align="center"><a href="http://www.kasamba.com/LandingPages/psychic/PsychicAdvice3min.aspx?desid=16,26,26,26&amp;catid=10328,1140,1143,1143&amp;banid=12175" target="_blank" class="mntxt">Live Psychic Readings</a></td></tr>
+        <tr><td align="center"><a href="http://www.catalogs.com/search_2.asp?depID=12" target="_blank" class="mntxt">Gifts &amp; Jewelry Catalogs</a></td></tr>
         <tr><td align="center"><a href="http://www.lovelandia.com/" target="_blank" class="mntxt">Love Poems And Lyrics</a></td></tr>
-        <tr><td align="center"><a href="http://www.beau-coup.com/fresh-ideas.htm" target="_blank" class="mntxt">Wedding Favor Ideas</a></td></tr>
+        <tr><td align="center"><a href="http://www.kasamba.com/LandingPages/psychic/PsychicAdvice3min.aspx?desid=16,41,26,26&amp;catid=10328,1140,1143,1143&amp;banid=16278" target="_blank" class="mntxt">Live Psychic Readings</a></td></tr>
+        <tr><td align="center"><a href="http://www.acez.com/" target="_blank" class="mntxt">Free Screen Savers</a></td></tr>
+        <tr><td align="center"><a href="http://www.beau-coup.com/themed-wedding-favors.htm" target="_blank" class="mntxt">Wedding Favor Ideas</a></td></tr>
         <tr><td align="center"><a href="http://www.allinonefunfavors.com/" target="_blank" class="mntxt">Custom Bridal Favors</a></td></tr>
         <tr><td align="center"><a href="http://www.christianet.com/" target="_blank" class="mntxt">Free Penpals &amp; Chat</a></td></tr>
-        <tr><td align="center"><a href="http://www.acez.com/" target="_blank" class="mntxt">Free Screen Savers</a></td></tr>
         <tr><td align="center"><a href="http://www.myexpression.com/" target="_blank" class="mntxt">Party Invitations</a></td></tr>
         <tr><td align="center"><a href="http://www.christianet.com/christianecards/" target="_blank" class="mntxt">Free Ecards</a></td></tr>
         <tr><td align="center"><a href="http://www.casinoratgeber.com/" target="_blank" class="mntxt">Online Casino</a></td></tr>
         <tr><td align="center"><a href="http://www.dreamscat.com/" target="_blank" class="mntxt">Ideas And Dreams</a></td></tr>
         <tr><td align="center"><a href="http://www.myweddingfavors.com/" target="_blank" class="mntxt">My Wedding Favors</a></td></tr>
-        <tr><td align="center"><a href="http://www.top100weddingsites.com/scripts/arp/rankem.cgi?action=in&amp;id=lpaq" target="_blank" class="mntxt">Top100WeddingSites</a></td></tr>
         <tr><td align="center"><a href="http://www.theromantic.com/" target="_blank" class="mntxt">1000s Romantic Ideas</a></td></tr>
         <tr><td align="center"><a href="http://www.candyundercover.com/" target="_blank" class="mntxt">Personalized Candy Bars</a></td></tr></tbody></table>
       <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
         <tbody><tr><td width="175" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
-      <table width="175" cellspacing="0" cellpadding="5" border="1" align="center" bgcolor="#FFFACD">
-        <tbody><tr><td width="175" align="center" class="vstxt">Free Clinique® or Estee <br>Lauder® Makeup Kit (US) :<br><a href="http://aff.primaryads.com/t.asp?id=2215&amp;e=11028" target="_blank">Click Here</a></td></tr></tbody></table>
-      <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="175" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
-      <table width="175" cellspacing="0" cellpadding="5" border="1" align="center" bgcolor="#FFFACD">
-        <tbody><tr><td width="175" align="center" class="vstxt">Get $500 cash for<br>Deal or No Deal survey :<br><a href="http://aff.primaryads.com/t.asp?id=2215&amp;e=11485" target="_blank">Click Here</a></td></tr></tbody></table>
-      <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="175" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
+
       <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000">
         <tbody><tr><td width="175" align="center"><a href="http://www.qksrv.net/click-942549-5542245" target="_blank"><img src="http://www.qksrv.net/image-942549-5542245" width="120" height="60" border="0" alt="RomanceHer.com"></a></td></tr></tbody></table>
     </td>
@@ -204,8 +197,8 @@ function abm()
             u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=3&c='+f+'"  target="_blank">';
             dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
             if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-            dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=5079&amp;m=3&amp;tp=3&amp;f=b&amp;v=1.4&amp;c=2867&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=5079&m=3&c=2867"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=5079&m=3&tp=3&f=b&v=1.4&c=2867&r=&d=n" width=120 height=600 border=0 ></a>
+            dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=5079&amp;m=3&amp;tp=3&amp;f=b&amp;v=1.4&amp;c=5493&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=5079&m=3&c=5493"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=5079&m=3&tp=3&f=b&v=1.4&c=5493&r=&d=n" width=120 height=600 border=0 ></a>
 </iframe>
 <noscript>
             <a href="http://media.fastclick.net/w/click.here?sid=5079&m=3&c=1"  target="_blank">
@@ -226,14 +219,7 @@ function abm()
         <tbody><tr><td width="122" align="center" class="vstxt">Unique invitations, favors, and gifts :<br><a href="http://www.mvsweddinginvitations.com/" target="_blank">MVS Wedding Invitations</a></td></tr></tbody></table>
       <table width="122" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
         <tbody><tr><td width="122" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
-      <table width="122" cellspacing="0" cellpadding="5" border="1" align="center" bgcolor="#FFFACD">
-        <tbody><tr><td width="122" align="center" class="vstxt">Free LD Calling<br>Card Via Email :<br><a href="http://1.offersquest.com/z/702/CD1775/" target="_blank">Click Here</a></td></tr></tbody></table>
-      <table width="122" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="122" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
-      <table width="122" cellspacing="0" cellpadding="5" border="1" align="center" bgcolor="#FFFACD">
-        <tbody><tr><td width="122" align="center" class="vstxt">Receive $100<br>by joining panel :<br><a href="http://aff.primaryads.com/t.asp?id=2215&amp;e=11915" target="_blank">Click Here</a></td></tr></tbody></table>
-      <table width="122" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="122" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
+
       <table width="122" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="FFFACD">
         <tbody><tr><td width="122" align="center"><a href="http://www.shareasale.com/r.cfm?b=5308&amp;u=63701&amp;m=1837&amp;urllink=&amp;afftrack=" target="_blank"><img src="http://www.shareasale.com/banners/LH120_60.gif" width="120" height="60" border="0" alt="Sara Freder"></a></td></tr></tbody></table>
     </td>
